--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "ver -logfile auto",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/trice",
+            "env": {},
+            "args": ["ver",
+                     "-logfile",
+                     "auto",
+                     "-verbose"
+            ]
+        },
+       {
             "name": "Launch test function",
             "type": "go",
             "request": "launch",
@@ -67,7 +80,8 @@
                      "-idlist",
                      "${workspaceFolder}/til.json"
             ]
-        },        {
+        },
+        {
             "name": "-p FILEBUFFER",
             "type": "go",
             "request": "launch",
