--- a/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
+++ b/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
@@ -72,7 +72,7 @@
           <BeforeMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice u -v -li ../../../li.json -i ../../../til.json -src ../Core -src ../../../pkg/src</UserProg1Name>
+            <UserProg1Name>trice u -li ../../../li.json -i ../../../til.json -src ../Core -src ../../../pkg/src</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -82,7 +82,7 @@
           <AfterMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice z -v -src ../Core -src ../../../pkg/src</UserProg1Name>
+            <UserProg1Name>trice z -src ../Core -src ../../../pkg/src</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
