--- a/test/MDK-ARM_STM32G031K8/MDK-ARM/MDK-ARM_STM32G031K8.uvprojx
+++ b/test/MDK-ARM_STM32G031K8/MDK-ARM/MDK-ARM_STM32G031K8.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_FULL_LL_DRIVER,HSE_VALUE=8000000,HSE_STARTUP_TIMEOUT=100,LSE_STARTUP_TIMEOUT=5000,LSE_VALUE=32768,EXTERNAL_CLOCK_VALUE=12288000,HSI_VALUE=16000000,LSI_VALUE=32000,VDD_VALUE=3300,PREFETCH_ENABLE=0,INSTRUCTION_CACHE_ENABLE=1,DATA_CACHE_ENABLE=1,STM32G031xx</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32G0xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32G0xx/Include;../Drivers/CMSIS/Include;..\..\..\pkg\src;..\..\..\third_party\segger.com\SEGGER_RTT\RTT;..\..\..\third_party\cJSON-1.7.15;..\..\..\third_party\TCOBSv1</IncludePath>
+              <IncludePath>../Drivers/STM32G0xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32G0xx/Include;../Drivers/CMSIS/Include;..\..\..\third_party\segger.com\SEGGER_RTT\RTT;..\Core\Inc;..\..\..\pkg\src</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
