--- a/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
+++ b/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
@@ -857,6 +857,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\pkg\trice\triceStackBuffer.c</FilePath>
             </File>
+            <File>
+              <FileName>cobs.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\pkg\trice\cobs.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
