--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -108,8 +108,8 @@
                      "${workspaceFolder}/til.json"
             ]
         },
-        {
-            "name": "-p ARK",
+        { 
+            "name": "-p com46",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -117,19 +117,11 @@
             "env": {},
             "args": ["log",
                     "-port",
-                    "FILEBUFFER",
-                     "-args",
-                     "${workspaceFolder}/ARK_log.bin",
+                    "com46",
                      "-i",
-                     "${workspaceFolder}/ARK_til.json",
+                     "${workspaceFolder}/../NAi2Development/SD3Modbus/SD3-HW-RevA-Lib_Modbus-STM32-HAL-FreeRTOS/til.json",
                      "-li",
-                     "${workspaceFolder}/ARK_li.json",
-                     "-prefix",
-                     "off",
-                     "-hs",
-                     "off",
-                     "-ts",
-                     "off"
+                     "${workspaceFolder}/../NAi2Development/SD3Modbus/SD3-HW-RevA-Lib_Modbus-STM32-HAL-FreeRTOS/li.json"
             ]
         },
         {
