--- a/.gitignore
+++ b/.gitignore
@@ -13,19 +13,21 @@
 #.id
 #_tryout/*
 
-internal/decoder/debug.test
-.netrc
-dist/**
-*.uvoptx
-*.__i
-*._ia
+#internal/decoder/debug.test
+#.netrc
+#dist/**
+#*.uvoptx
+#*.__i
+#*._ia
 
-test/MDK-ARM_STM32F030R8/temp/
-test/testdata/temp/
-test/vsCode_Nucleo-G0B1_instrumented/temp/
-test/Nucleo-STM32L432LC_generated/build/
-test/PSoC-Creator-4.2-Workspace/PSoC-Creator-4.2-Workspace.cywrk.ms
-test/PSoC-Creator-4.2-Workspace/Software_Transmit_UART.cydsn/Software_Transmit_UART.cyfit
-test/PSoC-Creator-4.2-Workspace/Software_Transmit_UART.cydsn/Software_Transmit_UART.rpt
+#test/MDK-ARM_STM32F030R8/temp/
+#test/testdata/temp/
+#test/vsCode_Nucleo-G0B1_instrumented/temp/
+#test/Nucleo-STM32L432LC_generated/build/
+#test/PSoC-Creator-4.2-Workspace/PSoC-Creator-4.2-Workspace.cywrk.ms
+#test/PSoC-Creator-4.2-Workspace/Software_Transmit_UART.cydsn/Software_Transmit_UART.cyfit
+#test/PSoC-Creator-4.2-Workspace/Software_Transmit_UART.cydsn/Software_Transmit_UART.rpt
 
 dist/
+**/build/
+**/temp/
